fix: icon alignment

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -20,4 +20,5 @@ body {
 
 .material-symbols-outlined {
   font-variation-settings: "FILL" 0, "wght" 400, "GRAD" 0, "opsz" 24;
+  font-size: inherit;
 }
